--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <title>{% block title %}{% endblock %} - Stock Guide</title>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
 <nav>
   <h1>Stock Guide and Analyst</h1>
   <ul>
     {% if g.user %}
     <li><span>{{ g.user['username'] }}</span></li>
-    <li><a href="{{ url_for('auth.logout') }}">Log Out</a> {% else %}</li>
-
-    <li><a href="{{ url_for('auth.register') }}">Register</a></li>
+    <li><a href="{{ url_for('auth.logout') }}" type="button" class="btn btn-dark">Log Out</a> {% else %}</li>
+    &nbsp;
+    <li><a href="{{ url_for('auth.register') }}" type="button" class="btn btn-dark">Register</a></li>
     <li>
-      <a href="{{ url_for('auth.login') }}">Log In</a>
+      <a href="{{ url_for('auth.login') }}" type="button" class="btn btn-dark">Log In</a>
       {% endif %}
     </li>
   </ul>
