--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -149,3 +149,22 @@ input[type="submit"] {
   align-self: start;
   min-width: 10em;
 }
+
+table {
+  border-collapse: collapse;
+}
+
+table, th, td {
+  border: 1px solid black;
+}
+
+th, td {
+  padding: 15px;
+  text-align: left;
+}
+
+th, td {
+  border-bottom: 1px solid #ddd;
+}
+
+tr:hover {background-color: #054903;}
