--- a/flaskr/templates/stock/index.html
+++ b/flaskr/templates/stock/index.html
@@ -1,17 +1,43 @@
-{% extends 'base.html' %} {% block header %}
-<h1>{% block title %}Stocks{% endblock %}</h1>
-{% if g.user %}
-<a class="action btn btn-dark" href="{{ url_for('stock.choose') }}"  type="button">Add Stock</a>
-{% endif %} {% endblock %} {% block content %} {% for post in posts %}
-<article class="post">
-  <header>
-    <div>
-      <h3>{{ post['stock_name'] }}</h3>
-      <div class="about">{{post[0]}}<br />The Graph for {{post[0]}}<br /></div>
-      <img src="../static/{{post[1]}}" />
-    </div>
-  </header>
-</article>
-{% if not loop.last %}
-<hr />
-{% endif %} {% endfor %} {% endblock %}
+{% extends 'base.html' %}
+
+{% block header %}
+  <h1>{% block title %}Stocks{% endblock %}</h1>
+  {% if g.user %}
+    <a class="action" href="{{ url_for('stock.choose') }}">New</a>
+  {% endif %}
+{% endblock %}
+
+{% block content %}
+  <h1>Top 10 Stocks based on growth rate(Last 30 days)</h1>
+  <table>
+    <thead>
+    <tr>
+        <th>Stock</th>
+        <th>Code</th>
+    </tr>
+    </thead>
+    <tbody>
+        {% for row in table %} 
+            <tr>
+                <td>{{row[0]}}</td>
+                <td>{{row[1]}}</td>
+            </tr>
+        {% endfor %}        
+    </tbody>
+  </table>
+
+  {% for post in posts %}
+    <article class="post">
+      <header>
+        <div>
+          <h1>{{ post['stock_name'] }}</h1>
+	  <div class="about">{{post[0]}}<br>The Graph for {{post[0]}}<br>
+	  <img src = "../static/{{post[1]}}">
+        </div>
+      </header>
+    </article>
+    {% if not loop.last %}
+      <hr>
+    {% endif %}
+  {% endfor %}
+{% endblock %}
