--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -154,17 +154,23 @@ table {
   border-collapse: collapse;
 }
 
-table, th, td {
+table,
+th,
+td {
   border: 1px solid black;
 }
 
-th, td {
+th,
+td {
   padding: 15px;
   text-align: left;
 }
 
-th, td {
+th,
+td {
   border-bottom: 1px solid #ddd;
 }
 
-tr:hover {background-color: #054903;}
+tr:hover {
+  background-color: #054903;
+}
