--- a/flaskr/templates/stock/index.html
+++ b/flaskr/templates/stock/index.html
@@ -2,17 +2,39 @@
 <h1>{% block title %}Stocks{% endblock %}</h1>
 {% if g.user %}
 <a
-  class="action btn btn-dark"
+  class="action"
   href="{{ url_for('stock.choose') }}"
   type="button"
+  class="btn btn-dark"
   >Add Stock</a
 >
-{% endif %} {% endblock %} {% block content %} {% for post in posts %}
-<article class="post">
+{% endif %} {% endblock %} {% block content %}
+<h1>Top 10 Stocks based on growth rate(Last 30 days)</h1>
+<table class="table table-dark">
+  <thead>
+    <tr>
+      <th>Stock</th>
+      <th>Code</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for row in table %}
+    <tr>
+      <td>{{row[0]}}</td>
+      <td>{{row[1]}}</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+
+{% for post in posts %}
+<article>
   <header>
     <div>
-      <h3>{{ post['stock_name'] }}</h3>
-      <div class="about">{{post[0]}}<br />The Graph for {{post[0]}}<br /></div>
+      <b><h1>{{ post['stock_name'] }}</h1></b>
+      <div class="">
+        <b>{{post[0]}}<br />The Graph for {{post[0]}}</b><br />
+      </div>
       <img src="../static/{{post[1]}}" />
     </div>
   </header>
