--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <title>{% block title %}{% endblock %} - Stock Guide</title>
+<link rel="icon" 
+      type="image/png" 
+      href="https://github.com/lokesh45/Data_Warehousing/blob/master/Assignments/Course1/favicon.PNG">
 <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -27,14 +30,6 @@
       >
     </li>
     &nbsp;
-    <li>
-      <a
-        href="{{ url_for('auth.register') }}"
-        type="button"
-        class="btn btn-dark"
-        >Register</a
-      >
-    </li>
     <li>
       <a href="{{ url_for('auth.login') }}" type="button" class="btn btn-dark"
         >Log In</a
