--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -9,7 +9,7 @@ body {
   max-width: 1200px;
   margin: 0 auto;
   background: white !important;
-  color: white;
+  color: black;
   border-radius: 0.8px;
 }
 
