--- a/flaskr/templates/stock/index.html
+++ b/flaskr/templates/stock/index.html
@@ -34,7 +34,10 @@
     <div>
       <b><h1 class="stocknamesheader">{{ post['stock_name'] }}</h1></b>
       <div class="stocknamesheader">
-        <b>{{post[0]}}<br /><h5 class= "stocknamesheader">The Graph for {{post[0]}}</h5></b>
+        <b
+          >{{post[0]}}<br />
+          <h5 class="stocknamesheader">The Graph for {{post[0]}}</h5></b
+        >
       </div>
       <img src="../static/{{post[1]}}" />
     </div>
