--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <title>{% block title %}{% endblock %} - Stock Guide</title>
-<link rel="icon" 
-      type="image/png" 
-      href="https://github.com/lokesh45/Data_Warehousing/blob/master/Assignments/Course1/favicon.PNG">
+<link
+  rel="icon"
+  type="image/png"
+  href="https://github.com/lokesh45/Data_Warehousing/blob/master/Assignments/Course1/favicon.PNG"
+/>
 <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
